# read_later

./: .gitignore  Dockerfile  README.md  flake.nix  fly.toml  packages.nix  pyproject.toml  requirements.txt
src/: crud.py  database.py  extractor.py  feed_gen.py  main.py  metadata.py  models.py  schemas.py
static/: index.html  save.html  success.html
templates/: feed.html
